DTO, querystring 추가

--- a/src/main/resources/templates/ex04.html
+++ b/src/main/resources/templates/ex04.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="~{fragments/header:: myHeader }">
+    <head th:replace="~{fragments/header:: myHeader }"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     </head>
-        <div th:replace="~{fragments/gohome:: goToHome }"></div>
+    <div th:replace="~{fragments/gohome:: goToHome }"></div>
+    <hr>
         <body>
-        <h1>환영합니다</h1>
-        <p>여기는 Fragments를 실습하는 메인 컨텐츠 입니다.</p>
-        <p>위의 Head에는 myHeader 부분이 삽입되었고</p>
-        <p>아래의 footer에는 myFooter 부분이 삽입되었습니다</p>
-        </body>
+        <h1>ex04 Page</h1>
+        <!-- 관리자 데이터 -->
+        <p th:text="'안녕하세요 ' + ${who} + '님' ">인사말</p>
+        <p th:if="${isAdmin}">당신은 관리자 입니다</p>
+        <div th:if="${isAdmin}">
+            <h3>좋아하는 과일 리스트</h3>
+            <ul>
+                <li th:each="fruit : ${items}" th:text="${fruit}">과일리스트</li>
+            </ul>
+            
+        </div>
+        <!-- 일반인 데이터 -->
+        <p th:if="${!isAdmin}">당신은 일반인 입니다</p>
+        <p th:if="${!isAdmin}">쉬었다 가세요</p>
+        </body><hr>
         <div th:replace="~{fragments/footer:: myFooter }"></div>
     </html>
