--- a/src/main/resources/templates/ex07.html
+++ b/src/main/resources/templates/ex07.html
@@ -12,7 +12,7 @@
     <h1>ex07 Page</h1>
     <fieldset>
       <legend>Request Param 사용</legend>
-      <form action="/querystring">
+      <form action="/GET_querystring">
         <input type="text" name="inpName" id="" placeholder="이름" /><br />
         <input type="text" name="inpAge" id="" placeholder="나이" /><br />
         <input type="radio" name="inpGen" id="male" value="male" />
